// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a date time picker with a default date and time 1`] = `
<DateTimePicker
  disabled={false}
  name="date-time-input"
  utcOffset={0}
  value="2017-04-01T10:30"
/>
`;

exports[`should render a date time picker with disabled dates 1`] = `
<DateTimePicker
  disabled={false}
  excludeDates={
    Array [
      "2017-04-01",
    ]
  }
  name="date-time-input"
  utcOffset={0}
/>
`;

exports[`should render a date time picker with filtered dates 1`] = `
<DateTimePicker
  disabled={false}
  filterDate={[Function]}
  name="date-time-input"
  utcOffset={0}
/>
`;

exports[`should render a date time picker with included dates 1`] = `
<DateTimePicker
  disabled={false}
  includeDates={
    Array [
      "2017-04-01",
    ]
  }
  name="date-time-input"
  utcOffset={0}
/>
`;

exports[`should render a date time picker with min and max dates 1`] = `
<DateTimePicker
  disabled={false}
  maxDateTime="2017-04-01"
  minDateTime="2017-04-10"
  name="date-time-input"
  utcOffset={0}
/>
`;

exports[`should render a date time picker with onChange 1`] = `
<DateTimePicker
  disabled={false}
  name="date-time-input"
  onChange={[Function]}
  utcOffset={0}
/>
`;

exports[`should render a date time picker with onChangeRaw 1`] = `
<DateTimePicker
  disabled={false}
  name="date-time-input"
  onChangeRaw={[Function]}
  utcOffset={0}
/>
`;

exports[`should render a date time picker with releaseFocus 1`] = `
<DateTimePicker
  disabled={false}
  name="date-time-input"
  releaseFocus={[Function]}
  utcOffset={0}
/>
`;

exports[`should render a date time picker with requestFocus 1`] = `
<DateTimePicker
  disabled={false}
  name="date-time-input"
  requestFocus={[Function]}
  utcOffset={0}
/>
`;

exports[`should render a default date time picker 1`] = `
<DateTimePicker
  disabled={false}
  name="date-time-input"
  utcOffset={0}
/>
`;

exports[`should render a default date time picker with custom date input attributes 1`] = `
<DateTimePicker
  dateInputAttributes={
    Object {
      "id": "terra-date-input",
    }
  }
  disabled={false}
  name="date-time-input"
  utcOffset={0}
/>
`;

exports[`should render a default date time picker with custom time input attributes 1`] = `
<DateTimePicker
  disabled={false}
  name="date-time-input"
  timeInputAttributes={
    Object {
      "id": "terra-time-input",
    }
  }
  utcOffset={0}
/>
`;

exports[`should render a disabled date time picker 1`] = `
<DateTimePicker
  disabled={true}
  name="date-time-input"
  utcOffset={0}
/>
`;
